--- a/src/assets/style/index.css
+++ b/src/assets/style/index.css
@@ -217,6 +217,7 @@ body {
   transition-timing-function: cubic-bezier(0.7, 0, 0.35, 1);
 }
 .slides .slide:nth-child(1) .left {
+  overflow: hidden;
   position: absolute;
   z-index: -1;
   inset: 0;
@@ -406,7 +407,12 @@ body {
   top: 0;
   right: 0;
   width: 66.7%;
-  height: 50%;
+  height: 62%;
+}
+@media (min-width: 30rem) {
+  .slides .slide:nth-child(2) .left {
+    height: 50%;
+  }
 }
 @media (min-width: 48.625rem) {
   .slides .slide:nth-child(2) .left {
@@ -473,7 +479,12 @@ body {
   bottom: 0;
   left: 0;
   width: 66.7%;
-  height: 50%;
+  height: 62%;
+}
+@media (min-width: 30rem) {
+  .slides .slide:nth-child(2) .right {
+    height: 50%;
+  }
 }
 @media (min-width: 48.625rem) {
   .slides .slide:nth-child(2) .right {
